# fastapi-web-starter

./: .bumpversion.cfg  CHANGELOG.md  CHECKS  LICENSE  Makefile  app.json  main.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
app/pages/: home.md
app/routers/: accordion.py  twoforms.py  unsplash.py
tests/: test_main.py
